--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,24 @@
 body{
+
+    margin-left:5%;
+    margin-right:5%;
     background-color: #333437;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight:bolder;
+    font-size: 20px;
 }
-.topnav{
-    color: #E1B711;
-    /* if un selected : colour should be #636669 */
+#navbar{
+    position:fixed top;
+    align-items:right;
+    /* background-color: red; */
 }
+ul{
+padding-right: 20rem;    
+}
+#jumbo{
+    background-color: #333437;
+    color: white;
+}
+
+            
+            
