--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,47 @@
 body{
 
-    margin-left:5%;
-    margin-right:5%;
-    background-color: #333437;
+    /* margin-left:5%;
+    margin-right:5%; */
+    background: linear-gradient(to left, #88959c,#2F4152);
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight:bolder;
     font-size: 20px;
 }
 #navbar{
-    position:fixed top;
-    align-items:right;
     /* background-color: red; */
+    border-bottom: 1px solid #2F4152
 }
 ul{
-padding-right: 20rem;    
+padding-right: 35rem;    
 }
-#jumbo{
-    background-color: #333437;
-    color: white;
+#menu a{
+    font-size:15px;
+    color: #a8b2d0;
+}
+.content{
+
+    margin-left:10%;
+    margin-right: 10%;
+    margin-top:10%;
+}
+.box{
+    background-color:red;
+    height: 100px;
+}
+.intro {
+    /* background-color: red; */
+
+    border-top: 1px solid yellow;    
 }
 
-            
+.intro h5{
+    color: #64FFDA;
+    font-size: 100%;
+}
+
+.intro h1{
+    color: #f8fffd;
+    font-size:350%;
+}
+    
             
