--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ padding-right: 35rem;
     margin-top:10%;
 }
 .box{
-    background-color:red;
+    /* background-color:red; */
     height: 100px;
 }
 .intro {
