--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
+*{
+    margin: 0;
+    padding: 0 ;
+    box-sizing: border-box;
+    /* font-family: sans-serif; */
+}
 body{
-
-    /* margin-left:5%;
-    margin-right:5%; */
     background: linear-gradient(to left, #88959c,#2F4152);
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight:bolder;
@@ -20,9 +23,15 @@ padding-right: 35rem;
 }
 .content{
 
+    background-color: yellow;
+    height:100vh;
     margin-left:10%;
     margin-right: 10%;
-    margin-top:10%;
+
+}
+.intro{
+    background-color:red;
+    height:100vh;
 }
 .box{
     /* background-color:red; */
