--- a/sticky.css
+++ b/sticky.css
@@ -7,7 +7,8 @@
 }
 body{
     /* background-color: #0A1930; */
-    background: linear-gradient(to left, #4c5458,#2F4152);
+    /* background: linear-gradient(to left, #2f3436,#1e2a35); */
+    background: #0B192E;
     overflow: hidden;
 
 }
@@ -24,7 +25,7 @@ section{
     flex-direction: column;
 }
 #res{
-    border:1px solid #64FFDA;
+    border:1px solid #50c7ab;
     padding-left:10px;
     padding-right:10px;
     padding-top:5px;
@@ -34,16 +35,19 @@ section{
 
 }
 .header{
-    color: white;
+    color: rgb(255, 255, 255);
+    box-shadow: 10px 10px #0B192E;
     position:fixed;
     top:0;
     z-index: 10;
-    
-    height : 13vh;
+    height : 7vh;
     width:100%;
     align-items: center;
     display: flex;
     justify-content: space-between;
+    /* background: linear-gradient(to left, #32373a,#1f2b36); */
+    background:rgba(11, 27, 46);
+    backdrop-filter: blur(10rem);
 }
 
 .logo{
