--- a/sticky.css
+++ b/sticky.css
@@ -179,7 +179,138 @@ h5{
     /* background-color: rgb(194, 245, 184); */
 }
 .Contact{
-    /* background-color: rgb(231, 129, 163); */
+/* background-color:pink; */
+}
+.contact-container{
+    /* background-color:pink; */
+    margin: auto;
+    height: 70vh;
+    width: 70%;
+    /* border: 3px solid green; */
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
+    display:flex;
+    overflow:auto;
+}
+.c-links-icon li{
+    color: white;
+    display: inline-block;
+    padding:1.3rem ;
+    padding-left:0;
+    padding-bottom:0.2rem;
+    padding-top:2rem;
+    padding-right: 30px;
+}
+.c-links-icon li:hover{
+    color: #64FFDA;
+    display: inline-block;
+    padding:1.3rem ;
+    padding-left:0;
+    padding-bottom:0.2rem;
+    padding-top:2rem;
+    padding-right: 30px;
+    font-size: 16.5px;
+}
+.c-links-icon li a:hover{
+    color: #64FFDA;
+    display: inline-block;
+    padding-left:0;
+    font-size: 16.5px;
+}
+/* .c-links li{
+    color: #64FFDA;
+    display: inline-block;
+    padding:0.6rem ;
+    font-size:12px;
+    padding-left:0px;
+    padding-top:0px;
+}
+.c-links a{
+    color: #64FFDA;
+    display: inline-block;
+    padding:0.6rem ;
+    font-size:10px;
+    padding-left:0px;
+    padding-top:0px;
+}
+
+.c-links a:hover{
+    color: #64FFDA;
+    display: inline-block;
+    padding:0.6rem ;
+    font-size:8px;
+    padding-left:0px;
+    padding-top:0px;
+} */
+.c-info{
+    /* background-color:red; */
+    /* border: 1px solid yellow; */
+    overflow:auto;
+    height: auto;
+    width:100%;
+}
+.c-info h2{
+    color:rgb(151, 223, 245);
+    padding: 1rem;
+    padding-left: 0rem;
+    letter-spacing:2px;
+    padding-bottom: 1rem;
+}
+.c-info h4{
+    color:#67728D;
+    padding: 1rem;
+    padding-left: 0rem;
+    letter-spacing:1px;
+}
+.c-info h5{
+    color:rgb(151, 223, 245);
+    padding-top: 2px;
+    padding-bottom: 1rem;
+    /* padding:3px; */
+    font-size:100%;
+    letter-spacing:2px;
+}
+.footer{
+    color:#CCD6F6;
+    /* border: 1px solid yellow; */
+    /* width: 50%; */
+    line-height:20px;
+    height: 5vh;
+    overflow:hidden;
+    /* width:70vw; */
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    /* margin-top:1rem; */
+    text-align: center;
+    margin-bottom: 1rem;
+    /* text-overflow: none; */
+    /* display:flex; */
+}
+.footer:hover{
+    /* height:7vh; */
+    
+}
+.footer h6{
+    letter-spacing:2px;
+}
+.footer a:hover{
+    
+    color:#64FFDA;
+}
+.footer img{
+    background-color: #CCD6F6;
+    border-radius:20px;
+    width: 15px;
+    border-radius: 100px solid white;
+}
+.footer img:hover{
+    background-color: #64FFDA;
+    border-radius:10px;
+    width: 25px;
+    border-radius: 100px solid #64FFDA;
 }
 .flex{
     display: flex;
@@ -227,6 +358,7 @@ h5{
 
 a:hover {
     box-shadow: 0 5px 3px 0px rgba(0,0,0,.1);
+    text-transform: uppercase;
 }
   
 a:hover::before, a:hover::after {
