--- a/sticky.css
+++ b/sticky.css
@@ -41,7 +41,6 @@ body{
     line-height:80vh;
     font-family:  Fredoka;
     transition: all 1s;
-
 }
 
 .container{
@@ -178,9 +177,9 @@ h5{
 .skills-container{
         /* background-color:pink; */
         margin: auto;
-        height: 80vh;
+        height: 90vh;
         width: 70%;
-        border: 3px solid green;
+        /* border: 3px solid green; */
         padding: 10px;
         align-items: center;
         justify-content: center;
@@ -192,22 +191,22 @@ ul{
     text-decoration: none;
 }
 .skills-content{
-    border: 1px solid pink;
+    /* border: 1px solid pink; */
     display: flex;
 }
 .heading{
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
 }
 .titles{
-    border: 1px solid gold;
+    /* border: 1px solid gold; */
 }
 .techstack{
-    border: 1px solid silver;
+    /* border: 1px solid silver; */
     width: 100%;
     color:white;
 }
 .tech-icons{
-   border: 1px solid white;
+   /* border: 1px solid white; */
    display:flex;
 }
 .tech-icons img{
@@ -653,4 +652,84 @@ input[type=text], select, textarea {
   input[type=submit]:hover {
     font-weight: bold;
     background: #1F375C;
+  }
+
+  .card {
+    padding: 2rem;
+    /* background-image: url(https://unsplash.it/600); */
+    /* placeholder image */
+    background-size: cover;
+    /* background-color: #0B192E; */
+    background-blend-mode: multiply;
+    color: white;
+    text-align: left;
+  }
+  
+  .card h3{
+      color: white;
+  }
+
+  .card__title {
+    position: relative;
+    z-index: 1;
+    display: inline-block;
+    margin-bottom: 1rem;
+  }
+  
+  .card__title::after {
+    content: "";
+    position: absolute;
+    top: -0.25rem;
+    left: -2rem;
+    bottom: -0.25rem;
+    width: calc(100% + 4rem);
+    background: #253855;
+    z-index: -1;
+    -webkit-transform: scaleX(0.075);
+            transform: scaleX(0.075);
+    -webkit-transform-origin: left;
+            transform-origin: left;
+    transition: -webkit-transform 250ms ease-in;
+    transition: transform 250ms ease-in;
+    transition: transform 250ms ease-in, -webkit-transform 250ms ease-in;
+  }
+  
+  .card:hover .card__title::after {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+  
+  .card__body {
+    position: relative;
+    z-index: 1;
+    color: transparent;
+    margin: 0;
+    transition: color 150ms 350ms;
+  }
+  
+  .card__body::after {
+    content: "";
+    position: absolute;
+    top: -0.75rem;
+    bottom: -0.75rem;
+    left: -0.75em;
+    right: -0.75em;
+    background: rgb(196, 194, 194);
+    z-index: -1;
+    -webkit-transform: scaleY(0);
+            transform: scaleY(0);
+    transition: -webkit-transform 250ms ease-in 250ms;
+    transition: transform 250ms ease-in 250ms;
+    transition: transform 250ms ease-in 250ms, -webkit-transform 250ms ease-in 250ms;
+    -webkit-transform-origin: top;
+            transform-origin: top;
+  }
+  
+  .card:hover .card__body {
+    color: black;
+  }
+  
+  .card:hover .card__body::after {
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
   }
