--- a/sticky.css
+++ b/sticky.css
@@ -9,7 +9,7 @@ body{
     /* background-color: #0A1930; */
     /* background: linear-gradient(to left, #2f3436,#1e2a35); */
     background: #0B192E;
-    overflow: hidden;
+    /* overflow: hidden; */
     font-family: Arial, Helvetica, sans-serif; 
 }
 
@@ -75,7 +75,7 @@ section{
 .header{
     /* display:none; */
     color: rgb(255, 255, 255);
-    box-shadow: 2px 2px #0B192E;
+    /* box-shadow: 2px 2px #0B192E; */
     position:fixed;
     top:0;
     z-index: 10;
@@ -85,8 +85,8 @@ section{
     display: flex;
     justify-content: space-between;
     /* background: linear-gradient(to left, #32373a,#1f2b36); */
-    background:rgba(11, 27, 46 , -2);
-    backdrop-filter: blur(0.5rem);
+    background:rgba(11, 27, 46 , -1);
+    backdrop-filter: blur(1rem);
 }
 
 .logo{
@@ -118,7 +118,7 @@ section{
 a{
     text-decoration:none;
     color:white;
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 .intro-content{
     /* background-color:red; */
@@ -128,7 +128,7 @@ a{
     justify-content: center;
     /* border:2px solid white; */
     margin-left: 15rem;
-    margin-top: 10rem;
+    margin-top: 15%;
     width: 70%;
     /* border: 1px solid green; */
     padding: 10px;
@@ -261,10 +261,9 @@ ul{
 }
 
 .c-links-icon li:hover{
-    color: #64FFDA;
     display: inline-block;
     padding:1.3rem ;
-    padding-left:0;
+    padding-left:0; 
     padding-bottom:0.2rem;
     padding-top:2rem;
     padding-right: 30px;
@@ -333,6 +332,7 @@ ul{
     font-size:100%;
     letter-spacing:2px;
 }
+
 .footer{
     color:#CCD6F6;
     /* border: 1px solid yellow; */
