--- a/sticky.css
+++ b/sticky.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Mono:wght@300;400;500&display=swap');
 *{
     margin: 0;
     padding: 0 ;
     box-sizing: border-box;
+
     /* font-family: sans-serif; */
     /* background: linear-gradient(to left, #88959c,#2F4152); */
 }
@@ -10,7 +12,9 @@ body{
     /* background: linear-gradient(to left, #2f3436,#1e2a35); */
     background: #0B192E;
     /* overflow: hidden; */
+    color:white;
     font-family: Arial, Helvetica, sans-serif; 
+    font-family: 'DM Mono', monospace;
 }
 
 .splash{
@@ -219,6 +223,38 @@ ul{
 .Projects{
     /* background-color: rgb(221, 231, 129); */
 }
+
+.Projects-container{
+    /* background-color:pink; */
+
+    margin: auto;
+    height: 80vh;
+    width: 70%;
+    /* border: 3px solid green; */
+    padding: 10px;
+    align-items: left;
+    justify-content: center;
+    display:flex;
+    flex-direction:column;
+    overflow:auto;
+
+}
+.project-headings{
+    /* display: block; */
+    /* border: 1px solid gold; */
+    /* position: fixed; */
+    width:auto;
+    height:auto;
+    margin-left: 0;
+}
+.card-list{
+    /* margin-top: 3rem; */
+    /* border: 1px solid gold; */
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+}
 .Experience{
     /* background-color: rgb(194, 245, 184); */
 }
@@ -279,31 +315,6 @@ ul{
     padding-left:0;
     font-size: 16.5px;
 }
-/* .c-links li{
-    color: #64FFDA;
-    display: inline-block;
-    padding:0.6rem ;
-    font-size:12px;
-    padding-left:0px;
-    padding-top:0px;
-}
-.c-links a{
-    color: #64FFDA;
-    display: inline-block;
-    padding:0.6rem ;
-    font-size:10px;
-    padding-left:0px;
-    padding-top:0px;
-}
-
-.c-links a:hover{
-    color: #64FFDA;
-    display: inline-block;
-    padding:0.6rem ;
-    font-size:8px;
-    padding-left:0px;
-    padding-top:0px;
-} */
 .c-info{
     /* background-color:red; */
     /* border: 1px solid yellow; */
