--- a/sticky.css
+++ b/sticky.css
@@ -230,7 +230,7 @@ ul{
     margin: auto;
     height: 80vh;
     width: 80%;
-    /* border: 3px solid green; */
+    border: 3px solid green;
     padding: 10px;
     align-items: left;
     justify-content: center;
@@ -239,6 +239,10 @@ ul{
     overflow:auto;
 
 }
+.popup{
+    /* display:none; */
+}
+
 .project-headings{
     /* display: block; */
     /* border: 1px solid gold; */
