--- a/sticky.css
+++ b/sticky.css
@@ -402,6 +402,32 @@ ul {
   .primary-navigation[data-visible="true"] {
     transform: translateX(0%);
   }
+  .intro-content {
+    border: 1px solid green;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+  }
+  h1 {
+    border: 1px solid gold;
+    font-size: 250%;
+    color: white;
+    width: 100%;
+  }
+  h2 {
+    width: 100%;
+    border: 1px solid gold;
+
+    font-size: 200%;
+  }
+  h5 {
+    width: 100%;
+    border: 1px solid gold;
+    color: rgb(151, 223, 245);
+    font-size: 100%;
+    letter-spacing: 2px;
+  }
   #res {
     border: none;
     padding-left: 0;
@@ -427,7 +453,7 @@ ul {
     display: flex;
     flex-direction: column;
     overflow: visible;
-    border: 1px solid green;
+    /* border: 1px solid green; */
     height: 100%;
     width: 100%;
   }
