--- a/sticky.css
+++ b/sticky.css
@@ -426,7 +426,7 @@ ul {
     width: auto;
     height: 100%;
     margin-top: 10%;
-    padding: 1rem;
+    padding: 2rem 10px 3rem 10px;
   }
   h1 {
     /* border: 1px solid gold; */
@@ -443,8 +443,12 @@ ul {
     /* width: 100%; */
     /* border: 1px solid gold; */
     color: rgb(151, 223, 245);
-    font-size: 60%;
+    font-size: 80%;
     letter-spacing: 2px;
+  }
+  span.emoji {
+    font-size: 1px;
+    line-height: 100px;
   }
   .btnn {
     width: 100%;
