--- a/sticky.css
+++ b/sticky.css
@@ -121,12 +121,14 @@ a {
   /* font-weight: bold; */
 }
 .intro-content {
-  /* border: 1px solid green; */
+  border: 1px solid green;
+  margin-left: 10%;
   color: white;
   display: flex;
   flex-direction: column;
   margin-top: 10%;
   padding: 2rem;
+  width: 80%;
 }
 h3 {
   color: rgb(151, 223, 245);
@@ -171,6 +173,35 @@ h5 {
 .About {
   /* background-color: rgb(129, 231, 217); */
 }
+.about-content {
+  border: 1px solid green;
+  margin-left: 10%;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  height:100vh;
+  /* margin-top: 3%; */
+  padding: 2rem;
+  width: 80%;
+}
+.about-content h2{
+  color:white;
+}
+.about-para p{
+  width: 70%;
+  height: 10vw;
+  border: 1px solid gold;
+  display: flex;
+  color:rgb(191, 220, 250);
+  flex-direction: column;
+  align-items: left;
+  justify-content: center;
+  margin-top: 1rem;
+}
+.extras{
+  border: 1px solid pink;
+  margin-top:2rem;
+}
 .Skills {
   /* background-color: rgb(165, 129, 231); */
 }
@@ -179,8 +210,8 @@ h5 {
   /* background-color:pink; */
   margin: auto;
   height: 90vh;
-  width: 70%;
-  /* border: 3px solid green; */
+  width: 80%;
+  border: 1px solid green;
   padding: 10px;
   align-items: center;
   justify-content: center;
@@ -223,7 +254,7 @@ ul {
   margin: auto;
   height: 80vh;
   width: 80%;
-  /* border: 3px solid green; */
+  border: 1px solid green;
   padding: 10px;
   align-items: left;
   justify-content: center;
@@ -231,9 +262,7 @@ ul {
   flex-direction: column;
   overflow: auto;
 }
-.popup {
-  /* display:none; */
-}
+
 
 .project-headings {
   /* display: block; */
@@ -425,6 +454,7 @@ ul {
     justify-content: center;
     width: auto;
     height: 100%;
+    margin-left: 0;
     margin-top: 10%;
     padding: 2rem 10px 3rem 10px;
   }
@@ -449,6 +479,36 @@ ul {
   span.emoji {
     font-size: 1px;
     line-height: 100px;
+  }
+  .about-content{
+    margin:0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    
+    padding:0rem;
+  }
+
+  .about-heading{
+    border: 1px solid red;
+    margin-left: 0;
+    left:0;
+    width: 100%;
+    margin-top: 20%;
+  }
+  .about-para{
+    border: 1px solid red;
+    margin:2rem  0rem ;
+    /* display:inline-block; */
+  }
+
+  .about-para p{
+    width: 100%;
+    margin-right: 0;
+    /* padding: 1rem; */
+    height:100px;
+    
   }
 
   .contact-container {
@@ -587,7 +647,7 @@ a:hover:after {
 
 div[class*="box"] {
   height: 33.33%;
-  width: 100%;
+  /* width: 100%; */
   padding-top: 3rem;
   /* display: flex; */
   justify-content: center;
@@ -656,8 +716,8 @@ div[class*="box"] {
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100%; */
+  /* height: 100%;
   z-index: 1;
   transition: all 0.3s;
   /* background-color: rgba(255,255,255,0.1); */
