--- a/sticky.css
+++ b/sticky.css
@@ -454,7 +454,7 @@ ul {
     justify-content: center;
     width: auto;
     height: 100%;
-    margin-left: 0;
+    margin-left: 2px;
     margin-top: 10%;
     padding: 2rem 10px 3rem 10px;
   }
@@ -481,7 +481,7 @@ ul {
     line-height: 100px;
   }
   .about-content{
-    margin:0;
+    margin-left:5px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -509,6 +509,16 @@ ul {
     /* padding: 1rem; */
     height:100px;
     
+  }
+
+  .skills-container{
+    margin-left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  .skills-container p{
+    /* padding: 1rem; */
   }
 
   .contact-container {
