--- a/sticky.css
+++ b/sticky.css
@@ -62,6 +62,7 @@ section {
   display: flex;
   flex-direction: column;
 }
+
 .get-in-touch {
   cursor: pointer;
 }
@@ -246,15 +247,21 @@ ul {
 }
 .Projects {
   /* background-color: rgb(221, 231, 129); */
+  height:70%;
+  /* border: 1px solid #64ffda; */
+  border-bottom: 0;
 }
 
+#Projects{
+  height:auto;
+}
 .Projects-container {
   /* background-color:pink; */
 
   margin: auto;
-  height: 80vh;
+  height: 70vh;
   width: 80%;
-  /* border: 1px solid green; */
+  border: 1px solid green;
   padding: 10px;
   align-items: left;
   justify-content: center;
@@ -264,13 +271,21 @@ ul {
 }
 
 
+
+
 .project-headings {
   /* display: block; */
   /* border: 1px solid gold; */
   /* position: fixed; */
   width: auto;
-  height: auto;
-  margin-left: 2rem;
+  margin-top: 1px;
+  /* height: 50; */
+  /* margin-left: 0rem; */
+
+}
+
+.project-headings h1{
+  font-size:2rem
 }
 .card-list {
   /* margin-top: 3rem; */
@@ -278,7 +293,7 @@ ul {
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 100%;
+  height: 60%;
 }
 .Experience {
   /* background-color: rgb(194, 245, 184); */
@@ -522,6 +537,33 @@ ul {
     /* padding: 1rem; */
   }
 
+  .Projects-container{
+    margin-left: 0;
+    width: 100%;
+    height: 100%;
+    display:flex;
+    flex-direction:column;
+    /* padding:10px; */
+  }
+  .project-headings{
+    margin-left: 0;
+  }
+
+  .project-headings h1{
+    font-size:1.75rem;
+  }
+
+  .card-list{
+    margin-left: 0;
+    margin-bottom:0;
+  }
+  .project-bottom{
+    margin-left: 0;
+    margin-top: 0;
+  }
+
+
+  
   .contact-container {
     display: flex;
     flex-direction: column;
@@ -551,6 +593,7 @@ ul {
   .c-info form .mrc {
     width: 100%;
   }
+
 }
 
 a:hover {
@@ -796,10 +839,7 @@ input[type="submit"]:hover {
 
 .card {
   padding: 2rem;
-  /* background-image: url(https://unsplash.it/600); */
-  /* placeholder image */
   background-size: cover;
-  /* background-color: #0B192E; */
   background-blend-mode: multiply;
   color: white;
   text-align: left;
