--- a/sticky.css
+++ b/sticky.css
@@ -261,7 +261,7 @@ ul {
   margin: auto;
   height: 70vh;
   width: 80%;
-  border: 1px solid green;
+  /* border: 1px solid green; */
   padding: 10px;
   align-items: left;
   justify-content: center;
