--- a/sticky.css
+++ b/sticky.css
@@ -127,6 +127,10 @@ a {
   color: white;
   display: flex;
   flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: left;
   margin-top: 10%;
   padding: 2rem;
   width: 80%;
@@ -149,8 +153,10 @@ h2 {
   color: rgb(184, 229, 243);
 }
 h5 {
+  margin-left: opx;
   color: rgb(151, 223, 245);
   padding-top: 3rem;
+  left: 0;
   /* padding:3px; */
   font-size: 100%;
   letter-spacing: 2px;
@@ -180,28 +186,28 @@ h5 {
   color: white;
   display: flex;
   flex-direction: column;
-  height:100vh;
+  height: 100vh;
   /* margin-top: 3%; */
   padding: 2rem;
   width: 80%;
 }
-.about-content h2{
-  color:white;
+.about-content h2 {
+  color: white;
 }
-.about-para p{
+.about-para p {
   width: 70%;
   height: 10vw;
   /* border: 1px solid gold; */
   display: flex;
-  color:rgb(191, 220, 250);
+  color: rgb(191, 220, 250);
   flex-direction: column;
   align-items: left;
   justify-content: center;
   margin-top: 1rem;
 }
-.extras{
+.extras {
   /* border: 1px solid pink; */
-  margin-top:2rem;
+  margin-top: 2rem;
 }
 .Skills {
   /* background-color: rgb(165, 129, 231); */
@@ -247,13 +253,13 @@ ul {
 }
 .Projects {
   /* background-color: rgb(221, 231, 129); */
-  height:70%;
+  height: 70%;
   /* border: 1px solid #64ffda; */
   border-bottom: 0;
 }
 
-#Projects{
-  height:auto;
+#Projects {
+  height: auto;
 }
 .Projects-container {
   /* background-color:pink; */
@@ -270,9 +276,6 @@ ul {
   overflow: auto;
 }
 
-
-
-
 .project-headings {
   /* display: block; */
   /* border: 1px solid gold; */
@@ -281,11 +284,10 @@ ul {
   margin-top: 1px;
   /* height: 50; */
   /* margin-left: 0rem; */
-
 }
 
-.project-headings h1{
-  font-size:2rem
+.project-headings h1 {
+  font-size: 2rem;
 }
 .card-list {
   /* margin-top: 3rem; */
@@ -422,8 +424,7 @@ ul {
   display: flex;
   gap: var(--gap, 3rem);
 }
-
-@media (max-width: 37em) {
+@media screen and (max-width: 37em) {
   .primary-navigation {
     --gap: 3rem;
     inset: 0 0 0 30%;
@@ -460,8 +461,20 @@ ul {
     z-index: 9999;
   }
 
+  .btnn {
+    position: relative;
+    margin-bottom: 10rem;
+    line-height: 50px;
+    height: 50px;
+    text-align: center;
+    width: 100%;
+    cursor: pointer;
+    border: 1px solid #64ffda;
+    border-radius: 20px;
+  }
+
   .intro-content {
-    /* border: 1px solid green; */
+    border: 1px solid green;
     color: white;
     display: flex;
     flex-direction: column;
@@ -495,71 +508,68 @@ ul {
     font-size: 1px;
     line-height: 100px;
   }
-  .about-content{
-    margin-left:5px;
+  .about-content {
+    margin-left: 5px;
+    /* margin-top: 50px; */
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: left;
-    
-    padding:0rem;
+    padding: 0rem;
   }
 
-  .about-heading{
+  .about-heading {
     /* border: 1px solid red; */
     margin-left: 0;
-    left:0;
+    left: 0;
     width: 100%;
-    margin-top: 20%;
+    /* margin-top: 20%; */
   }
-  .about-para{
+  .about-para {
     /* border: 1px solid red; */
-    margin:2rem  0rem ;
+    margin: 2rem 0rem;
     /* display:inline-block; */
   }
 
-  .about-para p{
+  .about-para p {
     width: 100%;
     margin-right: 0;
     /* padding: 1rem; */
-    height:100px;
-    
+    height: 100px;
   }
 
-  .skills-container{
+  .skills-container {
     margin-left: 0;
     width: 100%;
     height: 100%;
-    padding:10px;
+    padding: 10px;
   }
 
-  .Projects-container{
+  .Projects-container {
     margin-left: 0;
     width: 100%;
     height: 100%;
-    display:flex;
-    flex-direction:column;
+    display: flex;
+    flex-direction: column;
     /* padding:10px; */
   }
-  .project-headings{
+  .project-headings {
     margin-left: 0;
   }
 
-  .project-headings h1{
-    font-size:1.75rem;
+  .project-headings h1 {
+    font-size: 1.75rem;
   }
 
-  .card-list{
+  .card-list {
     margin-left: 0;
-    margin-bottom:0;
+    margin-bottom: 0;
   }
-  .project-bottom{
+  .project-bottom {
     margin-left: 0;
     margin-top: 0;
   }
 
-
-  
   .contact-container {
     display: flex;
     flex-direction: column;
@@ -590,7 +600,185 @@ ul {
   .c-info form .mrc {
     width: 100%;
   }
+}
 
+@media screen and (min-width: 20em) and (max-width: 60em) {
+  .primary-navigation {
+    --gap: 3rem;
+    inset: 0 0 0 30%;
+    position: fixed;
+    flex-direction: column;
+    padding: min(30vh, 10rem) 2rem;
+    font-size: 1em;
+    font-weight: bold;
+    color: white;
+    background: linear-gradient(to left, #98a4aa, #2f4152);
+    justify-content: center;
+    justify-items: center;
+    z-index: 1000;
+    transform: translateX(100%);
+  }
+  .primary-navigation[data-visible="true"] {
+    transform: translateX(0%);
+  }
+
+  #res {
+    border: none;
+    padding-left: 0;
+  }
+  .mobile-nav-toggle {
+    display: block;
+    position: absolute;
+    border: 0;
+    background-repeat: no-repeat;
+    width: 1rem;
+    /* aspect-ratio: 1; */
+    background: url("res/burger-solid.svg");
+    top: 2rem;
+    right: 2rem;
+    z-index: 9999;
+  }
+
+  .btnn {
+    position: relative;
+    margin-bottom: 10rem;
+    line-height: 50px;
+    height: 50px;
+    text-align: center;
+    width: 100%;
+    cursor: pointer;
+    border: 1px solid #64ffda;
+    border-radius: 20px;
+  }
+
+  .intro-content {
+    /* border: 1px solid green; */
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+    width: auto;
+    height: 1000%;
+    margin-left: 2px;
+    margin-top: 3%;
+    padding: 2rem 10px 3rem 10px;
+  }
+  h1 {
+    /* border: 1px solid gold; */
+    font-size: 150%;
+    color: white;
+    width: 100%;
+  }
+  h2 {
+    width: 100%;
+    /* border: 1px solid gold; */
+    font-size: 100%;
+  }
+  h5 {
+    /* width: 100%; */
+    /* border: 1px solid gold; */
+    color: rgb(151, 223, 245);
+    align-items: center;
+    font-size: 80%;
+    letter-spacing: 2px;
+  }
+  span.emoji {
+    font-size: 1px;
+    line-height: 100px;
+  }
+  .about-content {
+    margin-left: 5px;
+    /* margin-top: 50px; */
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    padding: 0rem;
+  }
+
+  .about-heading {
+    /* border: 1px solid red; */
+    margin-left: 0;
+    left: 0;
+    width: 100%;
+    /* margin-top: 1%; */
+  }
+  .about-para {
+    /* border: 1px solid red; */
+    margin: 2rem 0rem;
+    /* display:inline-block; */
+  }
+
+  .about-para p {
+    width: 100%;
+    margin-right: 0;
+    /* padding: 1rem; */
+    height: 100px;
+  }
+
+  .skills-container {
+    margin-left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+  }
+
+  .Projects-container {
+    margin-left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    /* padding:10px; */
+  }
+  .project-headings {
+    margin-left: 0;
+  }
+
+  .project-headings h1 {
+    font-size: 1.75rem;
+  }
+
+  .card-list {
+    margin-left: 0;
+    margin-bottom: 0;
+  }
+  .project-bottom {
+    margin-left: 0;
+    margin-top: 0;
+  }
+
+  .contact-container {
+    display: flex;
+    flex-direction: column;
+    /* overflow: visible; */
+    /* border: 1px solid green; */
+    align-items: center;
+    justify-content: center;
+    margin-top: 7%;
+    height: 100%;
+    width: 100%;
+  }
+  .c-info .c-links-icon {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 1rem;
+  }
+  .contact-container h2 {
+    font-size: 2rem;
+  }
+  .contact-container h4 {
+    font-size: 1rem;
+  }
+  .contact-container h5 {
+    font-size: 1rem;
+  }
+  .c-info form .mrc {
+    width: 100%;
+  }
 }
 
 a:hover {
@@ -598,107 +786,9 @@ a:hover {
   text-transform: uppercase;
 }
 
-a:hover::before,
-a:hover::after {
-  display: block;
-  content: "";
-  position: absolute;
-  /* width: 250px; */
-  width: 15px;
-  /* height: 250px; */
-  height: 10px;
-  background: #fda8cf;
-  border-radius: 5px;
-  z-index: -1;
-  animation: 1s clockwise infinite;
-}
-
-a:hover:after {
-  background: #f3ce5e;
-  animation: 2s counterclockwise infinite;
-}
-
-@keyframes clockwise {
-  0% {
-    top: -5px;
-    left: 0;
-  }
-  12% {
-    top: -2px;
-    left: 2px;
-  }
-  25% {
-    top: 0;
-    left: 5px;
-  }
-  37% {
-    top: 2px;
-    left: 2px;
-  }
-  50% {
-    top: 5px;
-    left: 0;
-  }
-  62% {
-    top: 2px;
-    left: -2px;
-  }
-  75% {
-    top: 0;
-    left: -5px;
-  }
-  87% {
-    top: -2px;
-    left: -2px;
-  }
-  100% {
-    top: -5px;
-    left: 0;
-  }
-}
-
-@keyframes counterclockwise {
-  0% {
-    top: -5px;
-    right: 0;
-  }
-  12% {
-    top: -2px;
-    right: 2px;
-  }
-  25% {
-    top: 0;
-    right: 5px;
-  }
-  37% {
-    top: 2px;
-    right: 2px;
-  }
-  50% {
-    top: 5px;
-    right: 0;
-  }
-  62% {
-    top: 2px;
-    right: -2px;
-  }
-  75% {
-    top: 0;
-    right: -5px;
-  }
-  87% {
-    top: -2px;
-    right: -2px;
-  }
-  100% {
-    top: -5px;
-    right: 0;
-  }
-}
-
 div[class*="box"] {
   height: 33.33%;
-  /* width: 100%; */
+  width: 100%;
   padding-top: 3rem;
   /* display: flex; */
   justify-content: center;
@@ -711,10 +801,11 @@ div[class*="box"] {
 }
 
 .btnn {
+  position: relative;
   line-height: 50px;
   height: 50px;
   text-align: center;
-  width: 200px;
+  width: 100%;
   cursor: pointer;
   border: 1px solid #64ffda;
   border-radius: 20px;
@@ -767,7 +858,7 @@ div[class*="box"] {
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 100%; */
+  width: 100%;
   /* height: 100%;
   z-index: 1;
   transition: all 0.3s;
@@ -835,7 +926,7 @@ input[type="submit"]:hover {
 }
 
 .card {
-  padding: 2rem;
+  padding: 1.5rem;
   background-size: cover;
   background-blend-mode: multiply;
   color: white;
@@ -848,7 +939,7 @@ input[type="submit"]:hover {
 
 .card__title {
   position: relative;
-  z-index: 1;
+  /* z-index: 1; */
   display: inline-block;
   margin-bottom: 1rem;
 }
@@ -872,7 +963,7 @@ input[type="submit"]:hover {
 }
 
 .card:hover .card__title::after {
-  -webkit-transform: scaleX(1);
+  /* -webkit-transform: scaleX(÷1); */
   transform: scaleX(1);
 }
 
