--- a/sticky.css
+++ b/sticky.css
@@ -474,7 +474,7 @@ ul {
   }
 
   .intro-content {
-    border: 1px solid green;
+    /* border: 1px solid green; */
     color: white;
     display: flex;
     flex-direction: column;
@@ -574,23 +574,23 @@ ul {
     display: flex;
     flex-direction: column;
     /* overflow: visible; */
-    border: 1px solid green;
+    /* border: 1px solid green; */
     align-items: center;
     justify-content: center;
     margin-top: 7%;
     width: 100%;
   }
   .c-info {
-    border: 1px solid white;
+    /* border: 1px solid white; */
     padding: 0;
   }
   .c-info h5 {
-    border: 1px solid gold;
+    /* border: 1px solid gold; */
     margin-bottom: 0;
   }
   .c-info ul {
-    margin-top: 2px;
-    border: 1px solid gold;
+    /* margin-top: 2px; */
+    /* border: 1px solid gold; */
     /* height: 20%; */
   }
   .c-info .c-links-icon {
@@ -609,8 +609,14 @@ ul {
   .contact-container h5 {
     /* font-size: 1rem; */
   }
+
+  .c-info form textarea {
+    border: 1px solid blue;
+  }
   .c-info form .mrc {
+    /* border: 1px solid blue; */
     width: 100%;
+    height: 50%;
   }
 }
 
