--- a/sticky.css
+++ b/sticky.css
@@ -251,51 +251,66 @@ ul {
 .tech-icons img {
   width: 3rem;
 }
+#Projects {
+  height: 70vh;
+  /* padding-top: 3rem; */
+  margin-top: 2rem;
+
+  justify-content: center;
+}
 .Projects {
-  /* background-color: rgb(221, 231, 129); */
-  height: 70%;
-  /* border: 1px solid #64ffda; */
-  border-bottom: 0;
+  /* border: 5px solid blue; */
+}
+#proj {
+  margin-top: 0%;
 }
 
-#Projects {
-  height: auto;
+.AndroidProjects {
+  height: 70vh;
 }
 .Projects-container {
   /* background-color:pink; */
 
-  margin: auto;
-  height: 70vh;
+  /* margin: auto; */
+  margin-left: 10%;
+  /* height: 70vh; */
   width: 80%;
   /* border: 1px solid green; */
   padding: 10px;
-  align-items: left;
-  justify-content: center;
+  /* align-items: left; */
+  /* justify-content: center; */
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   overflow: auto;
 }
 
-.project-headings {
-  /* display: block; */
-  /* border: 1px solid gold; */
-  /* position: fixed; */
-  width: auto;
-  margin-top: 1px;
-  /* height: 50; */
-  /* margin-left: 0rem; */
+.pheads-pbottom {
+  /* border: 1px solid white;
+  padding: 0; */
 }
 
+.pheads-pbottom h1 {
+  margin-left: 10%;
+}
+.pheads-pbottom h3 {
+  margin-left: 10%;
+}
+
+.pheads-pbottom h5 {
+  margin-left: 10%;
+}
 .project-headings h1 {
   font-size: 2rem;
 }
+
 .card-list {
   /* margin-top: 3rem; */
   /* border: 1px solid gold; */
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 60%;
+  height: 100%;
+  /* height */
 }
 .Experience {
   /* background-color: rgb(194, 245, 184); */
@@ -425,6 +440,9 @@ ul {
   gap: var(--gap, 3rem);
 }
 @media screen and (max-width: 37em) {
+  body {
+    height: 100%;
+  }
   .primary-navigation {
     --gap: 3rem;
     inset: 0 0 0 30%;
@@ -544,30 +562,72 @@ ul {
     height: 100%;
     padding: 10px;
   }
-
-  .Projects-container {
+  .pheads-pbottom {
     margin-left: 0;
-    width: 100%;
-    height: 100%;
+  }
+
+  #Projects {
     display: flex;
     flex-direction: column;
-    /* padding:10px; */
   }
   .project-headings {
+    display: flex;
+    flex-direction: column;
     margin-left: 0;
+    /* margin-top: 0; */
+  }
+
+  .Projects-container {
+    /* background-color:pink; */
+
+    /* margin: auto; */
+    margin-left: 0%;
+    /* height: 70vh; */
+    /* width: 100%; */
+    /* border: 1px solid green; */
+    /* padding: 10px; */
+    /* align-items: left; */
+    /* justify-content: center; */
+    /* display: flex;
+    flex-direction: column; */
+    overflow: auto;
+    height: 50vh;
+    border: 1px solid red;
+  }
+
+  .card-list {
+    height: auto;
+    border: 1px solid red;
+  }
+
+  .project-headings {
+    margin-left: 0;
+    /* margin-left: 0; */
+  }
+  .pheads-pbottom h1 {
+    margin-left: 0%;
+  }
+  .pheads-pbottom h3 {
+    margin-left: 0%;
+  }
+
+  .pheads-pbottom h5 {
+    margin-left: 0%;
   }
 
   .project-headings h1 {
     font-size: 1.75rem;
   }
 
-  .card-list {
+  /* .card-list {
     margin-left: 0;
     margin-bottom: 0;
-  }
+     height: 100%; 
+  } */
   .project-bottom {
-    margin-left: 0;
-    margin-top: 0;
+    /* margin-left: 0;
+    margin-top: 0; */
+    /* margin-top: -50px; */
   }
 
   .contact-container {
@@ -577,7 +637,8 @@ ul {
     /* border: 1px solid green; */
     align-items: center;
     justify-content: center;
-    margin-top: 7%;
+    /* margin-top: 7%; */
+    /* height: 100%; */
     width: 100%;
   }
   .c-info {
@@ -611,7 +672,7 @@ ul {
   }
 
   .c-info form textarea {
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
   }
   .c-info form .mrc {
     /* border: 1px solid blue; */
@@ -743,7 +804,7 @@ ul {
   }
 
   .Projects-container {
-    margin-left: 0;
+    /* margin-left: 0; */
     width: 100%;
     height: 100%;
     display: flex;
