--- a/sticky.css
+++ b/sticky.css
@@ -195,7 +195,7 @@ h5 {
   color: white;
 }
 .about-para p {
-  width: 70%;
+  width: 90%;
   height: 10vw;
   /* border: 1px solid gold; */
   display: flex;
@@ -203,11 +203,17 @@ h5 {
   flex-direction: column;
   align-items: left;
   justify-content: center;
-  margin-top: 1rem;
+  /* margin-top: 0.5rem; */
 }
 .extras {
   /* border: 1px solid pink; */
-  margin-top: 2rem;
+  margin-top: 1rem;
+  
+}
+.extras ul {
+  display: flex;
+  flex-direction: column;
+  padding-top: 1rem;
 }
 .Skills {
   /* background-color: rgb(165, 129, 231); */
@@ -550,10 +556,14 @@ ul {
   }
 
   .about-para p {
+    /* border: 1px solid red; */
     width: 100%;
-    margin-right: 0;
+    margin-bottom: 2rem;
     /* padding: 1rem; */
-    height: 100px;
+    height: 30%;
+  }
+  .extras{
+    margin-top:0rem;
   }
 
   .skills-container {
@@ -795,9 +805,21 @@ ul {
     width: 100%;
     margin-right: 0;
     /* padding: 1rem; */
-    height: 100px;
+    height: 30%;
   }
-
+  .extras{
+    margin-top:-5%;
+    padding: 0;
+    /* border: 1px solid red; */
+  }
+  .extras h5{
+    padding: 0;
+    /* margin-top:-2%;d */
+  }
+  .extras ul{
+    padding: 0;
+    /* margin-top:-2%; */
+  }
   .skills-container {
     margin-left: 0;
     width: 100%;
