--- a/sticky.css
+++ b/sticky.css
@@ -800,21 +800,17 @@ ul {
     /* padding: 1rem; */
     height: 20%;
   }
-  .extras{
-    margin-top:-5%;
-    padding: 0;
-    border: 1px solid red;
-  }
+
   /* .extras h5{
     padding: 0;
     /* margin-top:-2%;d */
-  } */
+   
   .extras ul{
     padding: 0;
     /* margin-top:-2%; */
   }
   .skills-container {
-    margin-left: 0;
+    margin-left: 0%;
     width: 100%;
     height: 100%;
     padding: 10px;
